# 7guis-reflex

./: 7guis-reflex.cabal  README.md  index.css  index.html  stack.yaml
src/: Main.hs  Utils.hs  Widgets.hs
src/GUIs/: CRUD.hs  Cells.hs  CircleDrawer.hs  Counter.hs  FlightBooker.hs  TemperatureConverter.hs  Timer.hs
src/GUIs/Cells/: Parser.hs  References.hs  Sheet.hs  Types.hs
src/GUIs/CircleDrawer/: Stack.hs
