name:                7guis-reflex
version:             0.1.0.0
-- synopsis:
-- description:
author:              Moritz Drexl
maintainer:          mdrexl@fastmail.fm
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable 7guis-reflex
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    TemplateHaskell
                     , OverloadedStrings
  build-depends:       base
                     , containers
                     , Decimal
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , safe
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
